# fts

./: Cargo.toml  README.md
src/: main.rs  movies.json  movies.rs
src/data_structures/: mod.rs
src/helpers/: mod.rs
src/indexing/: manager.rs  mod.rs
src/semantic_analysis/: mod.rs
src/semantic_analysis/n_grams/: mod.rs
src/semantic_analysis/root_words/: mod.rs
src/semantic_analysis/stop_words/: mod.rs
